--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,21 +8,13 @@
     <application
         android:name=".BitCoinTrackerApp"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.NoActionBar"
-        tools:targetApi="31">
-        <activity
-            android:name=".ui.login.LoginTempActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login_temp" />
-        <activity
-            android:name=".ui.login.LoginScreenActivity"
-            android:exported="false"></activity>
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+        tools:ignore="AllowBackup">
+        <activity android:name=".ui.login.LoginScreenActivity" />
         <activity
             android:name=".ui.splash.SplashScreenActivity"
             android:exported="true">
@@ -31,13 +23,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainScreenActivity"
             android:windowSoftInputMode="adjustNothing" />
     </application>
 
